tests/src/frontend/typechecking/invalid/overridable3.sk
base class MyBase {
  fun foo(): Int {
    42
  }
}

class Child() extends MyBase {
  fun foo(): Int;
}
